--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+
+    <color name="colorPrimary">#1c313a</color>
+    <color name="colorPrimaryDark">#455a64</color>
+    <color name="colorAccent">#718792</color>
+    <color name="colorText">#ffffff</color>
+    <color name="backgroudColor">#62757f</color>
+    <color name="dark">#000000</color>
+
+    <!--    STOCK COLORS-->
+    <!--        <color name="colorPrimary">#008577</color>-->
+    <!--        <color name="colorPrimaryDark">#00574B</color>-->
+    <!--        <color name="colorAccent">#D81B60</color>-->
 </resources>
