--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,14 @@
     <color name="backgroudColor">#62757f</color>
     <color name="dark">#000000</color>
 
+    <color name="purple1">#b085f5</color>
+    <color name="purple2">#7e57c2</color>
+    <color name="purple3">#4d2c91</color>
+    <color name="blue1">#8e99f3</color>
+    <color name="blue2">#5c6bc0</color>
+    <color name="blue3">#26418f</color>
+    <color name="white">#ffffff</color>
+
     <!--    STOCK COLORS-->
     <!--        <color name="colorPrimary">#008577</color>-->
     <!--        <color name="colorPrimaryDark">#00574B</color>-->
