--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -11,10 +11,10 @@
         <item
             android:id="@+id/nav_chat"
             android:icon="@drawable/ic_chat"
-            android:title="Chat" />
+            android:title="Your Reports" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Management">
         <menu>
             <item
                 android:id="@+id/nav_info"
