--- a/app/src/main/res/layout/notification_view.xml
+++ b/app/src/main/res/layout/notification_view.xml
@@ -5,12 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backgroudColor">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent"
+        android:background="@drawable/border"
         android:orientation="vertical"
         android:weightSum="10">
 
@@ -235,7 +236,7 @@
 
             <!-- Column 3.2 -->
             <androidx.cardview.widget.CardView
-                android:id="@+id/unlike"
+                android:id="@+id/dislike"
                 android:layout_width="0dp"
                 android:layout_height="75dp"
                 android:layout_rowWeight="1"
@@ -355,7 +356,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="0dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="15dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="2dp">
 
