--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -11,9 +11,9 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="170dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_firebase_logo" />
+        android:src="@mipmap/ic_icon_car_round" />
 
     <TextView
         android:id="@+id/text"
@@ -22,7 +22,7 @@
         android:layout_below="@+id/image"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="@string/firebase_login"
+        android:text="@string/app_name"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
 
@@ -42,7 +42,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/round_bg"
         android:drawableStart="@drawable/ic_google_logo"
         android:drawableLeft="@drawable/ic_google_logo"
