--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroudColor">
+    android:theme="@style/AppTheme">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,7 +62,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/raiting"
                             android:textAlignment="center"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/primary_text"
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
@@ -72,7 +72,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/latitude"
                             android:textAlignment="center"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/primary_text"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:visibility="invisible" />
@@ -83,7 +83,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/like"
                             android:textAlignment="center"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/primary_text"
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
@@ -93,7 +93,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/longitude"
                             android:textAlignment="center"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/primary_text"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             android:visibility="invisible" />
@@ -104,15 +104,13 @@
                             android:layout_height="wrap_content"
                             android:text="@string/dislike"
                             android:textAlignment="center"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/primary_text"
                             android:textSize="18sp"
                             android:textStyle="bold" />
-
 
                     </LinearLayout>
 
                 </LinearLayout>
-
 
             </androidx.cardview.widget.CardView>
 
