--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -4,12 +4,11 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroudColor">
+    android:theme="@style/AppTheme">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent"
         android:orientation="vertical"
         android:weightSum="10">
 
@@ -47,7 +46,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/app_name"
                         android:textAlignment="center"
-                        android:textColor="@android:color/holo_blue_light"
+                        android:textColor="@color/primary_text"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
