--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@color/colorPrimary"
+    android:background="@color/primary_dark"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp">
@@ -19,8 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
-        android:text="Example"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:text="Example" />
 
     <TextView
         android:id="@+id/email"
