--- a/app/src/main/res/layout/notification_view.xml
+++ b/app/src/main/res/layout/notification_view.xml
@@ -6,7 +6,8 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroudColor">
+    android:background="@color/primary"
+    android:theme="@style/AppTheme">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +49,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/choose_action"
                         android:textAlignment="center"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/primary_text"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -76,7 +77,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/traffic_cone"
                 android:layout_width="0dp"
-                android:layout_height="75dp"
+                android:layout_height="85dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="15dp"
@@ -84,8 +85,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="5dp"
                 app:cardCornerRadius="10dp"
-                app:cardElevation="2dp"
-                card_view:cardBackgroundColor="@color/colorPrimaryDark">
+                app:cardElevation="2dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -108,7 +108,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/car_crash"
                 android:layout_width="0dp"
-                android:layout_height="75dp"
+                android:layout_height="85dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="5dp"
@@ -141,7 +141,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/inspection"
                 android:layout_width="0dp"
-                android:layout_height="75dp"
+                android:layout_height="85dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="15dp"
@@ -149,8 +149,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="5dp"
                 app:cardCornerRadius="10dp"
-                app:cardElevation="2dp"
-                card_view:cardBackgroundColor="@color/colorPrimaryDark">
+                app:cardElevation="2dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -173,7 +172,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/speed_camera"
                 android:layout_width="0dp"
-                android:layout_height="75dp"
+                android:layout_height="85dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="5dp"
@@ -206,7 +205,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/like"
                 android:layout_width="0dp"
-                android:layout_height="75dp"
+                android:layout_height="85dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="15dp"
@@ -238,7 +237,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/dislike"
                 android:layout_width="0dp"
-                android:layout_height="75dp"
+                android:layout_height="85dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="5dp"
@@ -295,7 +294,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/distance"
                         android:textAlignment="center"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/primary_text"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -379,7 +378,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/hide"
                             android:textAlignment="center"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/primary_text"
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
