--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,21 +24,18 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/btn_profile"
                 android:layout_width="0dp"
-                android:layout_height="180dp"
+                android:layout_height="300dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginBottom="10dp"
+                android:layout_margin="10dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="2dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="left"
-                    android:layout_margin="20dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
                     android:orientation="horizontal"
                     android:padding="2dp">
 
@@ -49,17 +46,28 @@
                         android:src="@drawable/ic_cup" />
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:layout_margin="5dp"
+                        android:layout_margin="10dp"
                         android:orientation="vertical"
-                        android:padding="2dp">
+                        android:padding="3dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_margin="5dp"
+                            android:text="@string/your_profile"
+                            android:textColor="@color/primary_text"
+                            android:textSize="22sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/user_raiting"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
                             android:text="@string/raiting"
                             android:textAlignment="center"
                             android:textColor="@color/primary_text"
@@ -70,6 +78,7 @@
                             android:id="@+id/user_latitude"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
                             android:text="@string/latitude"
                             android:textAlignment="center"
                             android:textColor="@color/primary_text"
@@ -81,6 +90,7 @@
                             android:id="@+id/user_like"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
                             android:text="@string/like"
                             android:textAlignment="center"
                             android:textColor="@color/primary_text"
@@ -91,6 +101,7 @@
                             android:id="@+id/user_longitude"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
                             android:text="@string/longitude"
                             android:textAlignment="center"
                             android:textColor="@color/primary_text"
@@ -102,6 +113,7 @@
                             android:id="@+id/user_unlike"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
                             android:text="@string/dislike"
                             android:textAlignment="center"
                             android:textColor="@color/primary_text"
