--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,10 @@
 <!--    <color name="primary_dark">#303F9F</color>-->
 <!--    <color name="primary_light">#C5CAE9</color>-->
 <!--    <color name="accent">#FF5722</color>-->
-    <color name="primary">#280680</color>
-    <color name="primary_dark">#12005e</color>
-    <color name="primary_light">#3949ab</color>
-    <color name="accent">#c1d5e0</color>
+    <color name="primary">#001970</color>
+    <color name="primary_dark">#303f9f</color>
+    <color name="primary_light">#666ad1</color>
+    <color name="accent">#e64a19</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
