--- a/app/src/main/res/layout/item_cardview_reports.xml
+++ b/app/src/main/res/layout/item_cardview_reports.xml
@@ -9,8 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_margin="10dp"
+        android:orientation="vertical"
         android:weightSum="10">
 
         <GridLayout
@@ -103,6 +103,7 @@
                 android:layout_marginTop="0dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="5dp"
+                android:visibility="gone"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="2dp">
 
