poprawa nazwy zmiennej rating

--- a/app/src/main/res/layout/notification_view.xml
+++ b/app/src/main/res/layout/notification_view.xml
@@ -341,7 +341,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/user_raitingCV"
+                android:id="@+id/user_ratingCV"
                 android:layout_width="0dp"
                 android:layout_height="45dp"
                 android:layout_rowWeight="1"
@@ -361,7 +361,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/user_raiting"
+                        android:id="@+id/user_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/positive_button"
