--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -86,11 +86,11 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/user_raiting"
+                            android:id="@+id/user_rating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:text="@string/raiting"
+                            android:text="@string/rating"
                             android:textAlignment="center"
                             android:textColor="@color/primary_text"
                             android:textSize="18sp"
